# text2tok

./: README.md  main.py  pyproject.toml
examples/: example.py
src/text2tok/: __init__.py  text2tok.py
