[project]
name = "text2tok"
version = "1.2.2"
authors = [
    { name="Li Peng-Hsuan", email="jacobvsdanniel@gmail.com" },
]
description = "Text tokenizers optimized for sparse retrieval."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "regex>=2025.9.1",
    "transformers>=4.50.0",
    "pyicu>=2.16",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jacobvsdanniel/text2tok"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text2tok"]
